Corrected CSS selector for toggle positioning in PhotoFX
The selector for toggles changed to ".montage-toggle", this rule was now being applied to a toggle's own internal .toggle child.

Now we are no longer inadvertently making the .toggle clickable outside of the bounds of the toggle element itself.

The event distribution was correct, basically a click in any of the effect filter divs was actually hitting the invisible .toggle.

--- a/examples/photofx/effects-panel.reel/effects-panel.css
+++ b/examples/photofx/effects-panel.reel/effects-panel.css
@@ -22,8 +22,7 @@
     border-bottom-color: hsl(0,0%,62%);
 }
 
-.EffectsPanel .effectsList .toggle {
-    position: static;
+.EffectsPanel .effectsList .montage-toggle {
     display: inline-block;
     margin-right: 10px;
     margin-bottom: -4px;
